--- a/package.json
+++ b/package.json
@@ -3,11 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.18.0",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
-    "react-scripts": "1.1.4",
-    "request": "^2.85.0",
-    "request-promise": "^4.2.2"
+    "react-scripts": "1.1.4"
   },
   "scripts": {
     "start": "PORT=3001 react-scripts start",
